Add ability to create projects and display them

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -18,7 +18,7 @@
 		<div class="control">
 			<input
 				class="input"
-				type="text"
+				type="password"
 				placeholder="Password"
 				name="password"
 			/>
@@ -29,7 +29,7 @@
 		<div class="control">
 			<input
 				class="input"
-				type="text"
+				type="password"
 				placeholder="Confirm Password"
 				name="password-confirm"
 			/>
