--- a/app/templates/dash/project.html
+++ b/app/templates/dash/project.html
@@ -29,9 +29,9 @@
 		</div>
 		<div>
 			{% if project['which_craft'] == 'crochet' %}
-			<p class="title">Hook size</p>
+			<p>Hook size</p>
 			{% else %}
-			<p class="title">Needle size</p>
+			<p>Needle size</p>
 			{% endif %}
 			<div class="subtitle">{{ project['hook_needle_size'] }}</div>
 		</div>
