--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,10 +1,12 @@
-{% extends 'base.html' %} {% block header %}
-<h1>{% block title %}Log In{% endblock %}</h1>
-{% endblock %} {% block content %}
-<form method="POST">
-	<div class="field">
-		<label class="label">Username</label>
-		<div class="control">
+{% extends 'base.html' %} {% block header %} {% block title %}Log In{% endblock
+%} {% endblock %} {% block content %}
+<div class="form-ctn">
+	<form
+		method="POST"
+		class="grid gap-4 max-w-[500px]"
+	>
+		<div class="field">
+			<label class="label">Username</label>
 			<input
 				class="input"
 				type="text"
@@ -12,10 +14,9 @@
 				name="username"
 			/>
 		</div>
-	</div>
-	<div class="field">
-		<label class="label">Password</label>
-		<div class="control">
+		<div class="field">
+			<label class="label">Password</label>
+
 			<input
 				class="input"
 				type="password"
@@ -23,9 +24,7 @@
 				name="password"
 			/>
 		</div>
-	</div>
-	<div class="field">
-		<div class="control">
+		<div class="field">
 			<button
 				type="submit"
 				class="button is-link"
@@ -33,6 +32,6 @@
 				Submit
 			</button>
 		</div>
-	</div>
-</form>
+	</form>
+</div>
 {% endblock %}
