--- a/app/static/css/output-style.css
+++ b/app/static/css/output-style.css
@@ -6,6 +6,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-gray-700: oklch(37.3% 0.034 259.733);
     --spacing: 0.25rem;
     --container-xs: 20rem;
     --container-6xl: 72rem;
@@ -174,6 +175,9 @@
   .-ms-4 {
     margin-inline-start: calc(var(--spacing) * -4);
   }
+  .ms-0 {
+    margin-inline-start: calc(var(--spacing) * 0);
+  }
   .me-4 {
     margin-inline-end: calc(var(--spacing) * 4);
   }
@@ -186,8 +190,14 @@
   .grid {
     display: grid;
   }
+  .aspect-square {
+    aspect-ratio: 1 / 1;
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
+  }
+  .h-full {
+    height: 100%;
   }
   .w-auto {
     width: auto;
@@ -219,8 +229,14 @@
   .flex-col {
     flex-direction: column;
   }
+  .place-items-center {
+    place-items: center;
+  }
   .items-center {
     align-items: center;
+  }
+  .items-stretch {
+    align-items: stretch;
   }
   .justify-center {
     justify-content: center;
@@ -233,6 +249,12 @@
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .bg-gray-700 {
+    background-color: var(--color-gray-700);
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
@@ -247,6 +269,11 @@
   .sm\:grid-cols-3 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .sm\:grid-cols-\[300px_1fr\] {
+    @media (width >= 40rem) {
+      grid-template-columns: 300px 1fr;
     }
   }
   .sm\:flex-row {
@@ -264,9 +291,9 @@
       justify-content: flex-start;
     }
   }
-  .md\:grid-cols-5 {
+  .md\:grid-cols-4 {
     @media (width >= 48rem) {
-      grid-template-columns: repeat(5, minmax(0, 1fr));
+      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
   .lg\:px-8 {
@@ -375,6 +402,12 @@ form .button {
   width: 100%;
   margin-inline: 0;
 }
+.hero {
+  background-color: rgba(var(--logo-color), 0.7);
+  color: rgb(var(--bkgd-color));
+  padding-block: 10em;
+  padding-inline: 2em;
+}
 .inria-sans-light {
   font-family: 'Inria Sans', sans-serif;
   font-weight: 300;
@@ -405,9 +438,15 @@ form .button {
   font-weight: 700;
   font-style: italic;
 }
+.flash {
+  width: 100%;
+  border-radius: 5px;
+  background-color: rgb(175, 79, 79);
+  padding: 1em 0.5em;
+}
 .img-ctn {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
 }
 img {
   height: 100%;
@@ -427,7 +466,8 @@ a:focus {
   border: 1px solid black;
   border-radius: 5px;
   margin: 0.5em;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(var(--bkgd-color), 1);
+  color: rgb(var(--text-color));
   transition: background-color 200ms ease, color 200ms ease;
   cursor: pointer;
 }
