--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -129,6 +129,14 @@ form .button {
 	margin-inline: 0;
 }
 
+/* hero */
+.hero {
+	background-color: rgba(var(--logo-color), 0.7);
+	color: rgb(var(--bkgd-color));
+	padding-block: 10em;
+	padding-inline: 2em;
+}
+
 /* font */
 .inria-sans-light {
 	font-family: 'Inria Sans', sans-serif;
@@ -166,10 +174,17 @@ form .button {
 	font-style: italic;
 }
 
+.flash {
+	width: 100%;
+	border-radius: 5px;
+	background-color: rgb(175, 79, 79);
+	padding: 1em 0.5em;
+}
+
 /* images */
 .img-ctn {
-	width: 200px;
-	height: 200px;
+	width: 300px;
+	height: 300px;
 }
 
 img {
@@ -193,7 +208,8 @@ a:focus {
 	border: 1px solid black;
 	border-radius: 5px;
 	margin: 0.5em;
-	background-color: rgba(0, 0, 0, 0);
+	background-color: rgba(var(--bkgd-color), 1);
+	color: rgb(var(--text-color));
 	transition: background-color 200ms ease, color 200ms ease;
 	cursor: pointer;
 }
