--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5,6 +5,8 @@
 	--bkgd-color: 63, 55, 63;
 	--text-color: 218, 218, 218;
 	--logo-color: 102, 228, 102;
+	--danger-color: 192, 90, 90;
+	--secondary-color: 221, 221, 171;
 }
 
 /* reset */
@@ -30,6 +32,7 @@ h1 {
 
 h2 {
 	font-size: 1.5em;
+	line-height: 1.2em;
 }
 
 h3 {
@@ -53,6 +56,7 @@ form {
 .field {
 	display: grid;
 	gap: 0.2em;
+	margin-block-end: 1em;
 }
 
 .field input,
@@ -122,6 +126,7 @@ select:focus + .focus {
 
 progress {
 	border-radius: 5px;
+	margin-block-end: 0.2em;
 }
 
 form .button {
@@ -174,11 +179,16 @@ form .button {
 	font-style: italic;
 }
 
+/* flash message */
 .flash {
 	width: 100%;
 	border-radius: 5px;
 	background-color: rgb(175, 79, 79);
 	padding: 1em 0.5em;
+}
+
+.flash.confirm {
+	background-color: rgb(99, 146, 99);
 }
 
 /* images */
@@ -207,7 +217,7 @@ a:focus {
 	padding-block: 0.5em;
 	border: 1px solid black;
 	border-radius: 5px;
-	margin: 0.5em;
+	margin-block: 0.5em;
 	background-color: rgba(var(--bkgd-color), 1);
 	color: rgb(var(--text-color));
 	transition: background-color 200ms ease, color 200ms ease;
@@ -227,6 +237,24 @@ a:focus {
 	background-color: rgb(var(--logo-color));
 }
 
+.is-secondary {
+	background-color: rgba(var(--secondary-color), 0.7);
+	color: black;
+}
+
+.is-secondary:hover {
+	background-color: rgba(var(--secondary-color));
+}
+
+.is-danger {
+	background-color: rgba(var(--danger-color), 0.7);
+	color: black;
+}
+
+.is-danger:hover {
+	background-color: rgb(var(--danger-color));
+}
+
 .button:focus {
 	outline: 2px solid rgb(var(--logo-color));
 	outline-offset: 2px;
@@ -235,4 +263,13 @@ a:focus {
 .is-primary:focus {
 	outline: 2px solid black;
 	outline-offset: 2px;
+}
+
+/* override quill colors */
+.ql-picker-label {
+	color: rgb(var(--text-color));
+}
+
+.ql-snow .ql-stroke {
+	stroke: rgb(var(--text-color)) !important;
 }
